add: 側邊widget add:登入相關(登入、個人設定、關注清單、會員資訊列) update:基金ETF比較連結

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
@@ -3,32 +3,32 @@
     var errorMsg = TempData["OAuthErrorMsg"];
 }
 
+<p>@TempData["OAuthErrorMsg"]</p>
 @if (errorMsg != null)
 {
 <p>@errorMsg.ToString()</p>
 <p>五秒後為您回到上一頁。</p>
 <script>
-    function GoBack()
-    {
+
         let xhr = new XMLHttpRequest();
         xhr.open('post', '@ClientRoute.GenerateUrl(this, "Accounts", "GetUrlCookie")', true);
         xhr.send(null);
         xhr.onload = function () {
             let res = JSON.parse(xhr.responseText);
             const url = new URL(res.url);
-            location.href = url;
-        }
-    }
-    setTimeout(GoBack(), 5000);
+            setTimeout(() => location.href = url, 5000);
+        }  
 </script>
 }
 <script>
-    let xhr = new XMLHttpRequest();
-    xhr.open('post', '@ClientRoute.GenerateUrl(this, "Accounts", "GetUrlCookie")', true);
-    xhr.send(null);
-    xhr.onload = function () {
-        let res = JSON.parse(xhr.responseText);
-        const url = new URL(res.url);
-        location.href = url;
-    }
+
+        let xhr = new XMLHttpRequest();
+        xhr.open('post', '@ClientRoute.GenerateUrl(this, "Accounts", "GetUrlCookie")', true);
+        xhr.send(null);
+        xhr.onload = function () {
+            let res = JSON.parse(xhr.responseText);
+            const url = new URL(res.url);
+           location.href = url;
+        }
+
 </script>
