--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml
@@ -1,8 +1,11 @@
 ﻿@using Feature.Wealth.Account.Helpers;
 @using Foundation.Wealth.Helper;
+@using Xcms.Sitecore.Foundation.Basic.SitecoreExtensions;
+@using Feature.Wealth.Component.Models.HeaderWidget;
 @{
     var logoutUrl = ClientRoute.GenerateUrl(this, "Accounts", "Logout");
     var member = FcbMemberHelper.GetMemberAllInfo();
+    var loginItem = ItemUtils.GetItem(HeaderWidgetModel.Template.Login.Root);
 }
 <div class="l-header__tools">
     <div class="l-topbar">
@@ -109,31 +112,31 @@
                             <li class="c-listGroup__item">
                                 <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">關注清單</span>
-                                    <img src="@Url.Content("~/themes/images/icons/green/corner-right.svg")" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                             <li class="c-listGroup__item">
-                                <a href="#a" class="o-itemLink">
+                                <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">專屬推薦</span>
-                                    <img src="@Url.Content("~/themes/images/icons/green/corner-right.svg")" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                             <li class="c-listGroup__item">
                                 <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">理財試算</span>
-                                    <img src="@Url.Content("~/themes/images/icons/green/corner-right.svg")" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                             <li class="c-listGroup__item">
                                 <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">收藏新聞</span>
-                                    <img src="@Url.Content("~/themes/images/icons/green/corner-right.svg")" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                             <li class="c-listGroup__item">
                                 <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">遠距理財諮詢</span>
-                                    <img src="@Url.Content("~/themes/images/icons/green/corner-right.svg")" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                         </ul>
@@ -141,6 +144,46 @@
                     <div class="c-popover__footer">
                         <a href="#" class="o-btn o-btn--primary o-btn--sm o-btn--flat">預約諮詢</a>
                     </div>
+                    @*<nav class="c-popover__content">
+            <ul class="c-listGroup">
+                <li class="c-listGroup__item">
+                    @Html.Sitecore().BeginField(HeaderWidgetModel.Template.Login.Fields.FocusListLink.ToString(), loginItem, new { haschildren = true, @class = "o-itemLink" })
+                    <span class="o-itemLink__title t-bold">關注清單</span>
+                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                    @Html.Sitecore().EndField()
+                </li>
+                <li class="c-listGroup__item">
+                    @Html.Sitecore().BeginField(HeaderWidgetModel.Template.Login.Fields.ExclusiveRecommendationLink.ToString(), loginItem, new { haschildren = true, @class = "o-itemLink" })
+                    <span class="o-itemLink__title t-bold">專屬推薦</span>
+                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                    @Html.Sitecore().EndField()
+
+                </li>
+                <li class="c-listGroup__item">
+                    @Html.Sitecore().BeginField(HeaderWidgetModel.Template.Login.Fields.FinancialManagementTrialCalculationLink.ToString(), loginItem, new { haschildren = true, @class = "o-itemLink" })
+                    <span class="o-itemLink__title t-bold">理財試算</span>
+                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                    @Html.Sitecore().EndField()
+                </li>
+                <li class="c-listGroup__item">
+                    @Html.Sitecore().BeginField(HeaderWidgetModel.Template.Login.Fields.FavoriteNewsLink.ToString(), loginItem, new { haschildren = true, @class = "o-itemLink" })
+                    <span class="o-itemLink__title t-bold">收藏新聞</span>
+                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                    @Html.Sitecore().EndField()
+                </li>
+                <li class="c-listGroup__item">
+                    @Html.Sitecore().BeginField(HeaderWidgetModel.Template.Login.Fields.RemoteFinancialConsultingLink.ToString(), loginItem, new { haschildren = true, @class = "o-itemLink" })
+                        <span class="o-itemLink__title t-bold">遠距理財諮詢</span>
+                        <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                    @Html.Sitecore().EndField()
+                </li>
+            </ul>
+        </nav>
+        <div class="c-popover__footer">
+            @Html.Sitecore().BeginField(HeaderWidgetModel.Template.Login.Fields.ReserveConsultingLink.ToString(), loginItem, new { haschildren = true, @class = "o-btn o-btn--primary o-btn--sm o-btn--flat" })
+            預約諮詢
+            @Html.Sitecore().EndField()
+        </div>*@
                 </div>
             </div>
         </div>
