--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
@@ -1,4 +1,17 @@
-﻿<div class="c-sidebar__navs">
+﻿@using Foundation.Wealth.Helper;
+@using Feature.Wealth.Account.Helpers;
+@using Feature.Wealth.Component.Models.FundDetail;
+@using Feature.Wealth.Component.Models.ETF;
+@{
+    var fundSearchUrl = FundRelatedSettingModel.GetFundSearchUrl();
+    var etfSearchUrl = EtfRelatedLinkSetting.GetETFSearchUrl();
+    var fundDetailUrl = FundRelatedSettingModel.GetFundDetailsUrl();
+    var etfDetailUrl = EtfRelatedLinkSetting.GetETFDetailUrl();
+    var fundEtfCompareUrl = FundRelatedSettingModel.GetFundEtfCompareUrl();
+    var memberSettingUrl = MemberRelatedLinkHelper.GetMemberSettingUrl();
+
+}
+<div class="c-sidebar__navs">
     <a href="https://firstbk.tw/4s7bjv" target="_blank" class="c-sideBtn c-sideBtn--round">
         <i class="c-sideBtn__icon c-sideBtn__icon--service"></i>
         <span>第e客服</span>
@@ -9,7 +22,7 @@
     </a>
     <a href="#" class="c-sideBtn c-sideBtn--group c-sideBtn--last" data-sidebar="compare">
         <i class="c-sideBtn__icon c-sideBtn__icon--compare">
-            <span class="c-sideBtn__badge">2</span>
+            <span class="c-sideBtn__badge" id="compareBadge"></span>
         </i>
         <span>比較工具</span>
     </a>
@@ -17,63 +30,21 @@
 <div class="c-sidebar__panel">
     <a href="#" class="c-sidebar__close" data-sidebar-close></a>
     <div class="c-sidebar__content" data-sidebar-id="common">
-        <div class="c-sidebox">
+        <div class="c-sidebox" data-hasValue="true">
             <header class="c-sidebox__header">常用功能</header>
             <div class="c-sidebox__panel">
                 <div class="c-sidebox__content">
-                    <ul class="c-listGroup c-listGroup--box">
-                        <li class="c-listGroup__item">
-                            <a href="#" class="o-itemLink o-itemLink--sm">
-                                <span class="o-itemLink__title t-bold">基金搜尋</span>
-                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                            </a>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <a href="#" class="o-itemLink o-itemLink--sm">
-                                <span class="o-itemLink__title t-bold">熱銷基金</span>
-                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                            </a>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <a href="#" class="o-itemLink o-itemLink--sm">
-                                <span class="o-itemLink__title t-bold">績效排行</span>
-                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                            </a>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <a href="#" class="o-itemLink o-itemLink--sm">
-                                <span class="o-itemLink__title t-bold">投資週/月報</span>
-                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                            </a>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <a href="#" class="o-itemLink o-itemLink--sm">
-                                <span class="o-itemLink__title t-bold">國外股票搜尋</span>
-                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                            </a>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <a href="#" class="o-itemLink o-itemLink--sm">
-                                <span class="o-itemLink__title t-bold">ETF搜尋</span>
-                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                            </a>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <a href="#" class="o-itemLink o-itemLink--sm">
-                                <span class="o-itemLink__title t-bold">優惠活動</span>
-                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
-                            </a>
-                        </li>
+                    <ul class="c-listGroup c-listGroup--box" id="commonList">
                     </ul>
                 </div>
             </div>
-            <footer class="c-sidebox__footer">
+            <footer class="c-sidebox__footer" id="commonFunctionLimit">
                 <!-- 不論內容多高，置底的工具連結，放此處 -->
                 <div class="c-sidebox__tools">
-                    <a href="#" class="o-prefixLink o-prefixLink--gear">編輯常用功能</a>
+                    <a href="@memberSettingUrl" class="o-prefixLink o-prefixLink--gear">編輯常用功能</a>
                 </div>
                 <div class="c-sideDialog">
-                    <div class="c-sideDialog__msg">
+                    <div class="c-sideDialog__msg u-hidden">
                         <span class="t-bold">7/7</span>
                         <span class="t-tip">常用功能到上限嚕！</span>
                     </div>
@@ -81,64 +52,45 @@
                 </div>
             </footer>
         </div>
+        <div class="c-sidebox" data-hasValue="false">
+            <header class="c-sidebox__header">常用功能</header>
+            <div class="c-sidebox__panel c-sidebox__panel--vac">
+                <div class="c-sidebox__content">
+                    <div class="c-empty">
+                        <div class="c-empty__title">尚未設定常用功能</div>
+                        <p class="c-empty__tips">點擊設定，立即新增常用功能</p>
+                        <div class="c-empty__img">
+                            <img src="~/themes/images/lions/lion-common.svg" alt="">
+                        </div>
+                        <div class="c-empty__hint">最多可設定7個常用功能</div>
+                    </div>
+                    <div class="c-sidebox__actions">
+                        <ul class="l-list">
+                            <li class="l-list__item">
+                                <a href="@memberSettingUrl" class="o-btn o-btn--primary o-btn--sm o-btn--flat" id="setCommonBtn">設定常用功能</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
     <div class="c-sidebar__content" data-sidebar-id="compare">
-        <div class="c-sidebox">
+        <div class="c-sidebox" data-hasValue="true">
             <header class="c-sidebox__header">比較工具</header>
             <div class="c-sidebox__panel">
                 <div class="c-sidebox__content">
-                    <ul class="c-listGroup c-listGroup--box">
-                        <li class="c-listGroup__item">
-                            <div class="o-itemLink o-itemLink--sm">
-                                <a href="#" class="o-itemLink__title t-bold">TA25 安聯收益成長-AM穩定月收類股(美元)</a>
-                                <a href="#" class="o-itemLink__icon o-itemLink__icon--x"></a>
-                            </div>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <div class="o-itemLink o-itemLink--sm">
-                                <a href="#" class="o-itemLink__title t-bold">EK02 VANGUARD總體國際債券ETF</a>
-                                <a href="#" class="o-itemLink__icon o-itemLink__icon--x"></a>
-                            </div>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <div class="o-itemLink o-itemLink--sm">
-                                <a href="#" class="o-itemLink__title t-bold">78AE 日盛新台商證券投資信託基金</a>
-                                <a href="#" class="o-itemLink__icon o-itemLink__icon--x"></a>
-                            </div>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <div class="o-itemLink o-itemLink--sm">
-                                <a href="#" class="o-itemLink__title t-bold">TA25 安聯收益成長-AM穩定月收類股(美元)</a>
-                                <a href="#" class="o-itemLink__icon o-itemLink__icon--x"></a>
-                            </div>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <div class="o-itemLink o-itemLink--sm">
-                                <a href="#" class="o-itemLink__title t-bold">EK02 VANGUARD總體國際債券ETF</a>
-                                <a href="#" class="o-itemLink__icon o-itemLink__icon--x"></a>
-                            </div>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <div class="o-itemLink o-itemLink--sm">
-                                <a href="#" class="o-itemLink__title t-bold">78AE 日盛新台商證券投資信託基金</a>
-                                <a href="#" class="o-itemLink__icon o-itemLink__icon--x"></a>
-                            </div>
-                        </li>
-                        <li class="c-listGroup__item">
-                            <div class="o-itemLink o-itemLink--sm">
-                                <a href="#" class="o-itemLink__title t-bold">TA25 安聯收益成長-AM穩定月收類股(美元)</a>
-                                <a href="#" class="o-itemLink__icon o-itemLink__icon--x"></a>
-                            </div>
-                        </li>
+                    <ul class="c-listGroup c-listGroup--box" id="compareList">
                     </ul>
                 </div>
                 <div class="c-sidebox__actions">
-                    <a href="./fund/fundETFcompare.html" class="o-btn o-btn--primary o-btn--sm o-btn--flat">開始比較</a>
+                    <a href="@fundEtfCompareUrl" class="o-btn o-btn--primary o-btn--sm o-btn--flat">開始比較</a>
                 </div>
             </div>
-            <footer class="c-sidebox__footer">
+            <footer class="c-sidebox__footer" id="compareLimit">
                 <div class="c-sideDialog">
-                    <div class="c-sideDialog__msg">
+                    <div class="c-sideDialog__msg u-hidden">
                         <span class="t-bold">7/7</span>
                         <span class="t-tip">標的到上限嚕！</span>
                     </div>
@@ -146,5 +98,115 @@
                 </div>
             </footer>
         </div>
+        <div class="c-sidebox" data-hasValue="false">
+            <header class="c-sidebox__header">比較工具</header>
+            <div class="c-sidebox__panel c-sidebox__panel--vac">
+                <div class="c-sidebox__content">
+                    <div class="c-empty">
+                        <div class="c-empty__title">尚未加入比較標的</div>
+                        <p class="c-empty__tips">點擊加入<br>立即新增基金或ETF進行比較</p>
+                        <div class="c-empty__img">
+                            <img src="~/themes/images/lions/lion-compare.svg" alt="">
+                        </div>
+                        <div class="c-empty__hint">最多可加入7檔標的</div>
+                    </div>
+                    <div class="c-sidebox__actions">
+                        <ul class="l-list">
+                            <li class="l-list__item">
+                                <a href="@fundSearchUrl" class="o-btn o-btn--primary o-btn--sm o-btn--flat">加入基金</a>
+                            </li>
+                            <li class="l-list__item">
+                                <a href="@etfSearchUrl" class="o-btn o-btn--primary o-btn--sm o-btn--flat">加入ETF</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+    <script>
+
+        (function ($, window, document, undefined) {
+            window.SetCompareList = function () {
+                let compareStore = store.get('compare');
+                let html = "";
+                if (compareStore && compareStore.length > 0) {
+                    $('#compareBadge').text(compareStore.length);
+                    $('#compareBadge').removeClass('u-hidden');
+                    if (compareStore.length == 7) {
+                        $('#compareLimit > .c-sideDialog__msg').removeClass('u-hidden');
+                    }
+                    for (var i = 0; i < compareStore.length; i++) {
+                        let url = compareStore[i].type.toLowerCase() == "fund" ? "@(fundDetailUrl)" : "@(etfDetailUrl)"
+                        html += `<li class="c-listGroup__item">
+                            <div class="o-itemLink o-itemLink--sm">
+                                <a href="${url}?id=${compareStore[i].id}" class="o-itemLink__title t-bold">${compareStore[i].id} ${compareStore[i].name}</a>
+                                <a href="javascript:;" class="o-itemLink__icon o-itemLink__icon--x" data-compareDel data-id="${compareStore[i].id}"></a>
+                            </div>
+                        </li>`;
+                        $('#compareList', '[data-sidebar-id="compare"]').html(html);
+                    }
+                    $('[data-hasValue="false"]','[data-sidebar-id="compare"]').addClass('u-hidden');
+                    $('[data-hasValue="true"]','[data-sidebar-id="compare"]').removeClass('u-hidden');
+                } else {
+                     $('#compareBadge').addClass('u-hidden');
+                    $('[data-hasValue="false"]','[data-sidebar-id="compare"]').removeClass('u-hidden');
+                    $('[data-hasValue="true"]','[data-sidebar-id="compare"]').addClass('u-hidden');
+                }
+            }
+            window.SetCompareList();
+            $('[data-sidebar-id="compare"]').on('click','[data-compareDel]', function (e)
+            {
+                let self = e.target;
+                let obj = { id: $(self).data("id") };
+                window.removeItem('compare', obj);
+                $('[eh-compare]').trigger('exec');
+                window.SetCompareList();
+            });
+     let userLogin = @(FcbMemberHelper.CheckMemberLogin() ? "true": "false");
+          if (userLogin) {
+                window.SetCommonFunctionList = function () {
+                    $.ajax({
+                        type: "post",
+                        url: "@ClientRoute.GenerateUrl(this, "Accounts", "GetCommonFunctions")",
+                        success: function (resp) {
+                            if (resp && resp.statusCode == 200) {
+                                if (resp.body.length > 0) {
+                                    let commonHtml = "";
+                                    for (var i = 0; i < resp.body.length; i++) {
+                                        commonHtml += `<li class="c-listGroup__item">
+                                        <a href="${resp.body[i].pageUrl}" class="o-itemLink o-itemLink--sm">
+                                            <span class="o-itemLink__title t-bold">${resp.body[i].pageName}</span>
+                                            <img src="/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                        </a>
+                                    </li>`;
+                                    }
+                                    if (resp.body.length >= 7) {
+                                        $('#commonFunctionLimit > .c-sideDialog__msg').removeClass('u-hidden');
+                                    }
+                                    $('#commonList', '[data-sidebar-id="common"]').html(commonHtml);
+                                    $('[data-hasValue="false"]', '[data-sidebar-id="common"]').addClass('u-hidden');
+                                    $('[data-hasValue="true"]', '[data-sidebar-id="common"]').removeClass('u-hidden');
+                                } else {
+                                    $('[data-hasValue="false"]', '[data-sidebar-id="common"]').removeClass('u-hidden');
+                                    $('[data-hasValue="true"]', '[data-sidebar-id="common"]').addClass('u-hidden');
+                                }
+                            }
+                        },
+                        error: function (err)
+                        {
+                            console.log(err);
+                        },
+                    });
+            };
+                        window.SetCommonFunctionList();
+                } else
+                {
+                    let CommonBtn = document.getElementById('setCommonBtn');
+                    CommonBtn.setAttribute('href','#popupLogin');
+                    CommonBtn.setAttribute('data-popup','true');
+                    $('[data-hasValue="false"]', '[data-sidebar-id="common"]').removeClass('u-hidden');
+                    $('[data-hasValue="true"]', '[data-sidebar-id="common"]').addClass('u-hidden');
+                }
+    })(jQuery, window, document);
+    </script>
