--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -43,7 +43,8 @@
                 success: function (msg) {
                     console.log("TrackListFromDb :");
                     console.log(msg);
-
+                    store.set('focus', msg);
+                    $('[eh-focus]').trigger('exec');
                 },
             })
         }
@@ -65,6 +66,11 @@
             this.id = id;
             this.type = type;
             this.name = name;
+        }
+        window.FocsuObj = function (id, type) {
+            this.id = id;
+            this.type = type;
+            this.trackDate = getNowDate();
         }
         window.checkItemExists = function (key, value) {
             let existingEntries = store.get(key) || [];
@@ -199,8 +205,7 @@
                 let name = self.getAttribute('eh-focus-name');
                 let type = self.getAttribute('eh-focus-type');
                 if (id && name && type) {
-                    let obj = new CompareObj(id, type, name);
-                    obj.trackDate = getNowDate();
+                    let obj = new FocsuObj(id, type);
                     if (self.getAttribute('eh-focus-add').toString() == "false") {
                         addItem('focus', obj);
                         self.setAttribute('eh-focus-add', true);
@@ -434,6 +439,7 @@
             let self = e.target;
             let type = self.getAttribute('eh-info-type');
             let id = self.getAttribute('eh-info-id');
+            let url = $(self).closest("tr").find('[data-id]').attr('href');        
             $('[data-set-alert]', '#popupAlert').data('type', type);
             if (type.toLowerCase() != "fund") {
                 $("#popupAlert").find('[data-set-title]').text('收盤價');
@@ -446,7 +452,8 @@
                 data: { "type": type, "id": id},
                 beforeSend: function () { $('.c-loading').loading('show'); },
                 success: function (data) {
-                        $("#popupAlert").find('[data-title]').data('id', $(self).closest("tr").find('[data-id]').data('id'));
+                    $("#popupAlert").find('[data-title]').data('id', $(self).closest("tr").find('[data-id]').data('id'));
+                    $("#popupAlert").find('[data-title]')[0].setAttribute("href", url);
                         $("#popupAlert").find('[data-netvalue]').data('netvalue', $(self).closest("tr").find('[data-netvalue]').data('netvalue'));
                         $("#popupAlert").find('[data-netvaluedate]').data('netvaluedate', $(this).closest("tr").find('[data-netvaluedate]').data('netvaluedate'));
                         $("#popupAlert").find('[data-title]').text($(self).closest("tr").find('[data-id]').text());
@@ -503,7 +510,6 @@
                         $("#popupAlert").find('[data-alert-fall]').val('');
                         $("#popupAlert").find('[data-count-input]').val(0);
                         $("#popupAlert").find('.c-count__text').text(0);
-
                     }
                     $('.c-loading').loading('hide');
                 },
