--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStockDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStockDetail.cshtml
@@ -55,7 +55,7 @@
                             <li class="l-pageWallet__item">
                                 @Model.USStock.FocusButton
                             </li>
-                            @if (Model.USStock.OnlineSubscriptionAvailability == "Y")
+                            @if (Model.USStock.OnlineSubscriptionAvailability != "N")
                             {
                                 <li class="l-pageWallet__btn">
                                     @Model.USStock.SubscribeButton
