Update : 調整標籤設定欄位名稱、詳細頁調整沒資料時的判斷即顯示畫面

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -126,8 +126,8 @@
                                                                 <!-- 篩選checkbox外層[data-filter-checkbox] -->
                                                                 <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
                                                                 <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox>
-                                                                    <input class="o-btnCheckBox__input" type="checkbox" value="@item.TagTitle">
-                                                                    <div class="o-btnCheckBox__text" data-filter-value="@item.TagTitle"></div>
+                                                                    <input class="o-btnCheckBox__input" type="checkbox" value="@item.TagName">
+                                                                    <div class="o-btnCheckBox__text" data-filter-value="@item.TagName"></div>
                                                                 </label>
                                                             </div>
                                                         }
@@ -152,8 +152,8 @@
                                                                 <!-- 篩選checkbox外層[data-filter-checkbox] -->
                                                                 <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
                                                                 <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox>
-                                                                    <input class="o-btnCheckBox__input" type="checkbox" value="@item.TagTitle">
-                                                                    <div class="o-btnCheckBox__text" data-filter-value="@item.TagTitle"></div>
+                                                                    <input class="o-btnCheckBox__input" type="checkbox" value="@item.TagName">
+                                                                    <div class="o-btnCheckBox__text" data-filter-value="@item.TagName"></div>
                                                                 </label>
                                                             </div>
                                                         }
